--- a/layouts/izleti/section.html
+++ b/layouts/izleti/section.html
@@ -1,5 +1,6 @@
 {{ partial "header.html" . }}
 <h1 class='firstHeading'>{{ .Title }}</h1>
+{{ .Content }}
 {{ $pag := .Paginate .Pages }}
 {{ range $pag.Pages }}
   {{ partial "hike-blurb.html" . }}
