--- a/layouts/partials/hike-blurb.html
+++ b/layouts/partials/hike-blurb.html
@@ -1,6 +1,6 @@
 <section class='post blurb'>
   {{ if .Params.lead }}
-    <img src="/images/{{ .Type }}/{{ .Params.name }}/{{ .Params.lead }}" alt="{{ .Title }}">
+    <img src="/images/hikes/{{ .Params.name }}/{{ .Params.lead }}" alt="{{ .Title }}">
   {{ end }}
   <article class='post__content'>
     <h3 class='post__title' itemprop='name headline'>
