--- a/layouts/partials/body-navigation.html
+++ b/layouts/partials/body-navigation.html
@@ -1,6 +1,6 @@
 <ul class='nav-links'>
   <li><a href='/hikes.html'>hikes</a>
   <li><a href='/flowers'>flowers</a>
-  <li><a href='/izleti'>izleti</a>
+  <li><a href='/izleti.html'>izleti</a>
   <li><a href='/roze'>rože</a>
 </ul>
