Adding Base URL to templates

--- a/layouts/partials/body-navigation.html
+++ b/layouts/partials/body-navigation.html
@@ -1,8 +1,8 @@
 <ul class='nav-links'>
   <li>🇬🇧🇺🇸</li>
-  <li><a href='/hikes.html'>hikes</a>
-  <li><a href='/en/flowers'>flowers</a>
+  <li><a href='{{ $.Site.BaseURL }}hikes.html'>hikes</a>
+  <li><a href='{{ $.Site.BaseURL }}en/flowers'>flowers</a>
   <li>🇸🇮</li>
-  <li><a href='/izleti.html'>izleti</a>
-  <li><a href='/flowers'>rože</a>
+  <li><a href='{{ $.Site.BaseURL }}izleti.html'>izleti</a>
+  <li><a href='{{ $.Site.BaseURL }}flowers'>rože</a>
 </ul>
