--- a/themes/ipspace/layouts/partials/body-header.html
+++ b/themes/ipspace/layouts/partials/body-header.html
@@ -28,7 +28,7 @@
           <use xlink:href='#icon-close'></use>
         </svg>
       </button>
-      {{ partial "body-navigation.html" }}
+      {{ partial "body-navigation.html" . }}
       <div class="search-wrp min">
         <form action="https://duckduckgo.com/" class="search-form" id="search-form">
           <input class="search-input" id="search-input" name="q" placeholder="Search" type="text">
