--- a/themes/ipspace/layouts/partials/header.html
+++ b/themes/ipspace/layouts/partials/header.html
@@ -16,7 +16,7 @@
   <meta content='IE=edge' http-equiv='X-UA-Compatible' />
   <meta content='width=device-width, initial-scale=1' name='viewport' />
   <meta name="robots" content="index,follow">
-  <link href='/v3/css/other.css?rev=1' rel='stylesheet' type='text/css' />
+  <link href='{{ $.Site.BaseURL }}v3/css/other.css?rev=1' rel='stylesheet' type='text/css' />
   <style>svg { display: none }</style>
   {{ partial "extra-in-head.html" . }}
   {{ partial "fathom.html" . }}
@@ -26,7 +26,7 @@
 </head>
 <body>
   {{ partial "body-svg.html" }}
-  {{ partial "body-header.html" }}
+  {{ partial "body-header.html" . }}
   <!-- partial "body-banner.html" -->
   <div id="content-wrapper" class="content-wrapper">
     <div class='post flex'>
