Fixing page sorting

--- a/layouts/partials/flower-special-all.html
+++ b/layouts/partials/flower-special-all.html
@@ -1,6 +1,6 @@
 <section class='flower__gallery'>
 {{ $pages := where (where $.Site.Pages "Section" "flowers") "Kind" "page" }}
-{{ range $pages }}
+{{ range $pages.ByTitle }}
   {{ if .Params.lead }}
   {{ partial "flower-item.html" . }}
   {{ end }}
