--- a/layouts/partials/flower-special-latin.html
+++ b/layouts/partials/flower-special-latin.html
@@ -1,6 +1,6 @@
 <ul>
 {{ $pages := where (where $.Site.Pages "Section" "flowers") "Kind" "page" }}
-{{ range (sort $pages "Params.latin") }}
+{{ range $pages.ByParam "latin" }}
   {{ if .Params.lead }}
   <li><a href="{{ .Permalink }}">
     {{ .Params.latin }}
