--- a/static/v3/css/other.css
+++ b/static/v3/css/other.css
@@ -56,7 +56,7 @@ form.labeled .action-row .post #right-column a:not(.image),
   font-weight: bold;
   font-style: normal; }
 
-.post__author, .post__date, .caption, .post .cite, .post__item blockquote {
+.post__author, .post__date, .post .cite, .post__item blockquote {
   font-family: Verdana, sans-serif;
   font-weight: normal;
   font-style: italic; }
@@ -2045,53 +2045,6 @@ form.labeled.profile {
       margin-left: -3em;
       border: 1px inset #e8e8e8; }
 
-.post .separator, figure, .file-content figure {
-  margin: 12px 0; }
-  @media (min-width: 768px) {
-    .post .separator, figure, .file-content figure {
-      margin: 24px 0; } }
-  .post .separator img, figure img, .file-content figure img {
-    max-width: 100%;
-    max-width: calc(100% - 2 * 6px);
-    padding: 6px;
-    width: auto;
-    height: auto;
-    display: block; }
-    @media (min-width: 768px) {
-      .post .separator img, figure img, .file-content figure img {
-        max-width: calc(100% - 2 * 12px);
-        padding: 12px; } }
-.photos figure {
-  border: none; }
-  .photos figure img {
-    padding: 0 0;
-    max-width: calc(100% - 4px); }
-    @media (min-width: 768px) {
-      .photos figure img {
-        padding: 0 0;
-        max-width: calc(100% - 4px); } }
-  .photos figure figcaption {
-    font-size: 90%;
-    color: #372f2d;
-    background-color: inherit;
-    text-align: center; }
-
-figure {
-  border: 1px solid #372f2d;
-  display: inline-block; }
-  figure figcaption {
-    font-size: 90%;
-    padding: 3px 6px;
-    background-color: #372f2d;
-    color: #fff; }
-    figure figcaption p {
-      margin: 3px 0; }
-      @media (min-width: 768px) {
-        figure figcaption p {
-          margin: 6px 0; } }
-.caption {
-  color: #908d8c; }
-
 .post__list {
   margin: 0;
   padding: 0;
@@ -2548,6 +2501,137 @@ figure {
     background-color: #52453c;
     color: #fff;
     border: 2px inset; }
+
+/*
+Put this file in /static/css/hugo-easy-gallery.css
+Documentation and licence at https://github.com/liwenyip/hugo-easy-gallery/
+*/
+.fancy-figure:not(.caption-effect-appear) figcaption {
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
+
+.fancy-figure figure {
+  margin-left: 0;
+  margin-right: 0;
+  display: inline-block;
+  position: relative;
+  overflow: hidden; }
+  .fancy-figure figure a {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0; }
+
+.fancy-figure img {
+  max-width: 100%;
+  border: 1px solid #372f2d; }
+
+.fancy-figure figcaption {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #000;
+  color: #FFF;
+  text-align: center;
+  font-size: 90%;
+  /* change this if you want bigger text */
+  background-color: #372f2d;
+  border: 1px solid #372f2d;
+  color: #fff;
+  opacity: 1;
+  line-height: 1; }
+
+.fancy-figure.caption-position-default figure {
+  padding-bottom: 0.2em; }
+
+.fancy-figure.caption-position-none figcaption {
+  display: none; }
+
+.fancy-figure.caption-position-center figcaption {
+  top: 0;
+  padding: 40% 5px; }
+
+.fancy-figure.caption-position-bottom figcaption {
+  padding: 5px; }
+
+.fancy-figure.caption-effect-fade figure:not(:hover) figcaption, .fancy-figure.caption-effect-appear figure:not(:hover) figcaption {
+  background: rgba(0, 0, 0, 0);
+  opacity: 0; }
+
+.fancy-figure.caption-effect-slide.caption-position-bottom figure:not(:hover) figcaption {
+  margin-bottom: -100%; }
+
+.fancy-figure.caption-effect-slide.caption-position-center figure:not(:hover) figcaption {
+  top: 100%; }
+
+/*
+Grid Layout Styles
+*/
+.gallery {
+  overflow: hidden;
+  /* margin: 10px; */
+  max-width: 768px; }
+  .gallery .box {
+    float: left;
+    position: relative;
+    /* Default: 1 tile wide */
+    width: 100%;
+    padding-bottom: 100%; }
+    @media only screen and (min-width: 365px) {
+      .gallery .box {
+        width: 50%;
+        padding-bottom: 50%; } }
+    @media only screen and (min-width: 768px) {
+      .gallery .box {
+        /* Small desktop / ipad view: 3 tiles */
+        width: 33.3%;
+        padding-bottom: 33.3%;
+        /*  */ } }
+    @media only screen and (min-width: 1440px) {
+      .gallery .box {
+        /* Medium desktop: 4 tiles */
+        width: 25%;
+        padding-bottom: 25%; } }
+  .gallery figure {
+    position: absolute;
+    left: 5px;
+    right: 5px;
+    top: 5px;
+    bottom: 5px;
+    overflow: hidden;
+    margin: 0 0; }
+  .gallery .fancy-figure figure {
+    padding: 0 0; }
+  .gallery .img {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat; }
+  .gallery img {
+    display: none; }
+  .gallery.hover-transition figure, .gallery.hover-effect-zoom .img, .gallery:not(.caption-effect-appear) figcaption {
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+  .gallery.hover-effect-grow figure:hover {
+    transform: scale(1.05); }
+  .gallery.hover-effect-shrink figure:hover {
+    transform: scale(0.95); }
+  .gallery.hover-effect-slidedown figure:hover {
+    transform: translateY(5px); }
+  .gallery.hover-effect-slideup figure:hover {
+    transform: translateY(-5px); }
+  .gallery.hover-effect-zoom figure:hover .img {
+    transform: scale(1.05); }
 
 @media (min-width: 768px) {
   .flower__gallery {
