--- a/layouts/flowers/single.html
+++ b/layouts/flowers/single.html
@@ -42,4 +42,5 @@
   </div>
 </article>
 {{ partial "flower-sidebar.html" . }}
+{{ partial "load-photoswipe.html" . }}
 {{ partial "footer.html" . }}
