--- a/layouts/partials/body-banner.html
+++ b/layouts/partials/body-banner.html
@@ -1,12 +1,8 @@
-<div class='page-heading'>
+<div class='page-heading' style='background: url({{ $.Site.BaseURL}}images/{{ .Params.banner }})'>
   <div class='container'>
     <div class='page-heading__wrp'>
-      <h1 class='page-title'>Building network automation solutions</h1>
-      <div class='heading-banner'>
-        <h3 class='heading-banner__title'>9 module online course</h3>
-        <a class='heading-banner__btn'
-          href='https://www.ipspace.net/Building_Network_Automation_Solutions?utm_source=blog'>Start now!</a>
-      </div>
+      <h1 class='page-title'>{{ .Title }}
+      </h1>
     </div>
   </div>
 </div>
