--- a/layouts/partials/body-navigation.html
+++ b/layouts/partials/body-navigation.html
@@ -1,8 +1,8 @@
 <ul class='nav-links'>
-  <li>🇬🇧🇺🇸</li>
+  <li><a href='{{ $.Site.BaseURL }}'>🇬🇧🇺🇸</a></li>
   <li><a href='{{ $.Site.BaseURL }}en/hikes'>hikes</a>
   <li><a href='{{ $.Site.BaseURL }}en/flowers'>flowers</a>
-  <li>🇸🇮</li>
+  <li><a href='{{ $.Site.BaseURL }}start.si.html'>🇸🇮</a></li>
   <li><a href='{{ $.Site.BaseURL }}hikes'>izleti</a>
   <li><a href='{{ $.Site.BaseURL }}flowers'>rože</a>
 </ul>
