--- a/layouts/flowers/list.html
+++ b/layouts/flowers/list.html
@@ -2,7 +2,7 @@
 <h1 class='firstHeading'>{{ .Title }}</h1>
 {{ $pag := .Paginate .Pages }}
 {{ range $pag.Pages }}
-  {{ partial "hike-blurb.html" . }}
+  {{ partial "post-blurb.html" . }}
 {{ end }}
 {{ partial "post-pagination.html" . }}
 {{ partial "footer.html" . }}
