--- a/layouts/partials/multi-title.html
+++ b/layouts/partials/multi-title.html
@@ -1,12 +1,7 @@
 <header class='post__header'>
   {{ if (reflect.IsMap . )}}
   <h1 class='post__title firstHeading'>
-    {{ $flags := .page.Site.Data.flags }}
-    {{ range .page.Translations }}
-      <span class="translation__flag">
-        <a href="{{.Permalink}}">{{ index $flags .Lang }}</a>
-      </span>
-    {{ end }}
+    {{ partial "multi-flag.html" (dict "page" .page) }}
     {{ .title }}
   </h1>
   {{ else }}
