--- a/layouts/hikes/top.html
+++ b/layouts/hikes/top.html
@@ -3,7 +3,7 @@
 {{ partial "multi-title.html" $title }}
 <article id="left-column">
 {{ .Content }}
-{{ range (first 20 (where .Pages "Params.description" "!=" nil)).ByDate.Reverse }}
+{{ range (first 20 (where .Pages "Params.description" "!=" nil)).ByLastmod.Reverse }}
   {{ partial "post-blurb.html" . }}
 {{ end }}
 </article>
