Add swipe to other hike pages

--- a/layouts/hikes/section.html
+++ b/layouts/hikes/section.html
@@ -10,4 +10,5 @@
 {{ end }}
 </article>
 {{ partial "hikes-sidebar.html" . }}
+{{ partial "load-photoswipe.html" . }}
 {{ partial "footer.html" . }}
