--- a/layouts/hikes/list.html
+++ b/layouts/hikes/list.html
@@ -5,4 +5,5 @@
   {{ partial "post-blurb.html" . }}
 {{ end }}
 {{ partial "post-pagination.html" . }}
+{{ partial "load-photoswipe.html" . }}
 {{ partial "footer.html" . }}
