Make flower lead image swipeable

--- a/layouts/flowers/single.html
+++ b/layouts/flowers/single.html
@@ -3,9 +3,16 @@
 {{ partial "multi-title.html" $title }}
 <article id="left-column">
   {{ if and .Content .Params.lead }}
-    <span class="flower__item flower__lead">
-    {{ with .Resources.GetMatch .Params.lead }}<img src="{{ .Permalink }}">{{ end }}
-    </span>
+    {{ with .Resources.GetMatch .Params.lead }}
+      <div class="fancy-figure box caption-position-default flower__item flower__lead">
+        <figure itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject">
+          <div class="img">
+            <img itemprop="thumbnail" src="{{ .Permalink }}">
+          </div>
+          <a href="{{ .Permalink }}" itemprop="contentUrl"></a>
+        </figure>
+      </div>
+    {{ end }}
   {{ else }}
     {{ .Scratch.Set "lead" "NOLEAD" }}
   {{ end }}
