--- a/layouts/shortcodes/multipath-hike-short.html
+++ b/layouts/shortcodes/multipath-hike-short.html
@@ -1,6 +1,2 @@
 {{ $.Page.Scratch.Set "HikesListed" 1 }}
-<ul>
-{{ range $.Page.Pages.ByTitle }}
-  <li><a href="{{ .Permalink }}">{{ .Title }}</a> ({{ .Params.delta }} m, {{ .Params.duration }} {{ i18n "hour" (int .Params.duration) }})</li>
-{{ end }}
-</ul>
+{{ partial "multipath-hike-short" $.Page }}
