--- a/layouts/hikes/section.html
+++ b/layouts/hikes/section.html
@@ -2,12 +2,13 @@
 {{ $title := dict "title" .Title "page" . }}
 {{ partial "multi-title.html" $title }}
 <article id="left-column">
-{{ .Content }}
-{{ if not (.Scratch.Get "HikesListed") }}
-  {{ range .Pages.ByDate.Reverse }}
-    {{ partial "post-blurb.html" . }}
+  {{ partial "hike-crumbs" . }}
+  {{ .Content }}
+  {{ if not (.Scratch.Get "HikesListed") }}
+    {{ range .Pages.ByDate.Reverse }}
+      {{ partial "post-blurb.html" . }}
+    {{ end }}
   {{ end }}
-{{ end }}
 </article>
 {{ partial "hikes-sidebar.html" . }}
 {{ partial "load-photoswipe.html" . }}
