--- a/layouts/hikes/single.html
+++ b/layouts/hikes/single.html
@@ -2,6 +2,7 @@
 {{ $title := dict "title" .Title "page" . }}
 {{ partial "multi-title.html" $title }}
 <article id="left-column">
+  {{ partial "hike-crumbs" . }}
   {{ .Content }}
   {{ if eq .Lang "sl" }}
     {{ partial "izlet-zemljevid.html" . }}
