--- a/layouts/hikes/stub.html
+++ b/layouts/hikes/stub.html
@@ -2,6 +2,7 @@
 {{ $title := dict "title" .Title "page" . }}
 {{ partial "multi-title.html" $title }}
 <article id="left-column">
+  {{ partial "hike-crumbs" . }}
   {{ if .Params.description }}
     {{ .Params.description | markdownify }}
     <h2>The Basics</h2>
