--- a/layouts/posts/section.html
+++ b/layouts/posts/section.html
@@ -1,8 +1,10 @@
 {{ partial "header.html" . }}
+{{ $title := dict "title" .Title "page" . }}
+{{ partial "multi-title.html" $title }}
 <article id="left-column">
 {{ .Content }}
-<h2>{{ i18n "latestarticles" }}</h2>
-{{ range first 20 (union (where $.Site.Pages ".Description" "ne" "") (where $.Site.RegularPages "Type" "posts")).ByDate.Reverse }}
+<!--<h2>{{ i18n "latestarticles" }}</h2>-->
+{{ range .Pages.ByDate.Reverse }}
   {{ partial "post-blurb.html" . }}
 {{ end }}
 </article>
