Add temporary logo

--- a/layouts/partials/body-header.html
+++ b/layouts/partials/body-header.html
@@ -20,7 +20,7 @@
       </svg>
     </button>
     <a class='header-logo text' href='/'>
-      Slovenia-Hiking.info
+      SloveniaHiking.Rocks
     </a>
     <nav class='page-navigation' id='mobile-menu'>
       <button class='mobile-menu-close' id='close-menu'>
