Added "recent move" header

--- a/layouts/flowers/single.html
+++ b/layouts/flowers/single.html
@@ -52,4 +52,5 @@
 </article>
 {{ partial "flower-sidebar.html" . }}
 {{ partial "load-photoswipe.html" . }}
+{{ partial "migrated-footer.html" . }}
 {{ partial "footer.html" . }}
