--- a/layouts/hikes/single.html
+++ b/layouts/hikes/single.html
@@ -21,4 +21,5 @@
 </article>
 {{ partial "hikes-sidebar.html" . }}
 {{ partial "load-photoswipe.html" . }}
+{{ partial "migrated-footer.html" . }}
 {{ partial "footer.html" . }}
