--- a/layouts/partials/body-header.html
+++ b/layouts/partials/body-header.html
@@ -1,4 +1,4 @@
-<header class='site-header'>
+<header class='site-header' id="page-header-line">
   <div class='container'>
     <button class='mobile-menu-open' id='open-menu'>
       <svg viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'>
