--- a/layouts/hikes/section.html
+++ b/layouts/hikes/section.html
@@ -12,4 +12,5 @@
 </article>
 {{ partial "hikes-sidebar.html" . }}
 {{ partial "load-photoswipe.html" . }}
+{{ partial "migrated-footer.html" . }}
 {{ partial "footer.html" . }}
