--- a/layouts/partials/flower-sidebar-browse-en.html
+++ b/layouts/partials/flower-sidebar-browse-en.html
@@ -1,4 +1,12 @@
 <div class="regbox decorated">
+  <h3 class="sidebar__title">Featured</h3>
+  <ul>
+    <li><a href="{{ $.Site.BaseURL}}en/flowers/early-spring">Early spring flowers</a></li>
+    <li><a href="{{ $.Site.BaseURL}}en/flowers/family/orchidaceae">Slovenian orchids</a></li>
+    <li><a href="{{ $.Site.BaseURL}}en/flowers/genus/lilium">Slovenian lilies</a></li>
+  </ul>
+</div>
+<div class="regbox decorated">
   <h3 class="sidebar__title">Browse the Database</h3>
   <ul>
     <li><a href="{{ $.Site.BaseURL}}en/flowers">Slovenian wild flowers</a></li>
