--- a/layouts/family/taxonomy.html
+++ b/layouts/family/taxonomy.html
@@ -1,5 +1,5 @@
 {{ partial "header.html" . }}
-{{ $title := dict "title" .Title "page" . }}
+{{ $title := dict "title" (.Params.pagetitle | default .Title) "page" . }}
 {{ partial "multi-title.html" $title }}
 <article id="left-column">
 {{ .Content }}
