Add "ice climbing" blog post
Also:
* Add several shortcodes needed in tips
* Create a post template
* Add "picture import" tool

--- a/layouts/partials/sidebar-recent.html
+++ b/layouts/partials/sidebar-recent.html
@@ -1,4 +1,4 @@
-{{ $pages := where (where .Site.Pages ".Layout" "eq" "") "Description" "ne" "" }}
+{{ $pages := where (where .Site.Pages ".Layout" "ne" "stub") "Description" "ne" "" }}
 <div class="regbox decorated">
   <h3 class="sidebar__title">{{ i18n "recentupdates" . }}</h3>
   <ul>
