--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -3,6 +3,7 @@
 {{ partial "multi-title.html" $title }}
 <article id="left-column">
 {{ partial "hike-crumbs" . }}
+{{ partial "floating-lead" . }}
 {{ .Content }}
 </article>
 {{ partial "top-sidebar.html" . }}
