New starting page (plus a gazillion changes needed to get it done)

--- a/layouts/partials/hikes-sidebar-browse-en.html
+++ b/layouts/partials/hikes-sidebar-browse-en.html
@@ -3,5 +3,6 @@
   <ul>
     <li><a href="{{ $.Site.BaseURL}}en/hikes">Hiking around Slovenia</a></li>
     <li><a href="{{ $.Site.BaseURL}}en/hikes-list/list/">List of all hikes</a></li>
+    <li><a href="{{ $.Site.BaseURL}}en/hikes-list/list-photos/">Hikes with descriptions</a></li>
   </ul>
 </div>
