--- a/layouts/partials/migrated-footer.html
+++ b/layouts/partials/migrated-footer.html
@@ -1,7 +1,7 @@
 <header id="migrated" class='site-header migrated' style='display: none'>
   <div class='container'>
     {{ i18n "migrated" }}
-    {{ with $.Site.GetPage "/posts/2021/02/migration" }}
+    {{ with $.Site.GetPage "/posts/migration-2021" }}
       <a class='header-logo text' href='{{ .Permalink }}'>{{ i18n "more" }}</a>
     {{ end }}
   </div>
