--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,29 +1,4 @@
-<!DOCTYPE html>
-<head prefix="og: http://ogp.me/ns#">
-  <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
-  <link href='https://www.ipspace.net/v3/images/favicon.ico' rel='shortcut icon' />
-  <link href='https://www.ipspace.net/v3/images/favicon.gif' rel='shortcut icon' type='image/gif' />
-  <link href="{{ .Permalink }}" rel='canonical' />
-<!--
-  <link rel="alternate" type="application/atom+xml" title="ipSpace.net - Atom" href="https://feed.ipspace.net/blog/" />
-  <link rel="alternate" type="application/rss+xml" title="ipSpace.net - RSS" href="https://feed.ipspace.net/blog/?rss=1" />
--->
-  <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ if .IsPage }}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}">
-
-  <title>{{ .Title }} &#171; {{ .Site.Params.title }}</title>
-  {{ partial "opengraph.html" . }}
-  <meta charset='utf-8' />
-  <meta content='IE=edge' http-equiv='X-UA-Compatible' />
-  <meta content='width=device-width, initial-scale=1' name='viewport' />
-  <meta name="robots" content="index,follow">
-  <link href='{{ $.Site.BaseURL }}v3/css/other.css?rev=1' rel='stylesheet' type='text/css' />
-  <style>svg { display: none }</style>
-  {{ partial "extra-in-head.html" . }}
-  {{ partial "fathom.html" . }}
-  {{ if .OutputFormats.Get "RSS" }}
-  <link href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" rel="alternate" type="application/rss+xml">
-  {{ end }}
-</head>
+{{ partial "header-head.html" . }}
 <body>
   {{ partial "body-svg.html" }}
   {{ partial "body-header.html" . }}
