--- a/layouts/partials/hikes-sidebar-browse-sl.html
+++ b/layouts/partials/hikes-sidebar-browse-sl.html
@@ -3,5 +3,6 @@
   <ul>
     <li><a href="{{ $.Site.BaseURL}}hikes">Izleti po Sloveniji</a></li>
     <li><a href="{{ $.Site.BaseURL}}hikes-list/list/">Spisek izletov</a></li>
+    <li><a href="{{ $.Site.BaseURL}}hikes-list/list-photos/">Kratki opisi izletov</a></li>
   </ul>
 </div>
