--- a/static/v3/css/other.css
+++ b/static/v3/css/other.css
@@ -2220,6 +2220,35 @@ form.labeled.profile {
     vertical-align: bottom;
     transition: transform 0.3s ease-in-out; }
 
+@media (min-width: 768px) {
+  .tile_centered {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 24px; } }
+
+.tile_centered > p {
+  display: none; }
+
+@media (min-width: 768px) {
+  .tile_centered .tile-column {
+    display: grid;
+    grid-gap: 24px;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr; } }
+
+.tile_centered .tile-column .tile {
+  border: 1px solid #e8e8e8;
+  padding: 24px 24px;
+  background-color: rgba(205, 205, 205, 0.16);
+  display: flex;
+  flex-direction: row; }
+  @media (max-width: 767px) {
+    .tile_centered .tile-column .tile {
+      margin-bottom: 1em; } }
+  .tile_centered .tile-column .tile .thumb {
+    margin: 0 0;
+    max-width: 33%;
+    padding-right: 2em; }
+
 .sidebar .regbox .ctoc + p,
 #right-column .regbox .ctoc + p {
   color: #372f2d;
