Display "intro", "description" or "summary" in post blurbs

--- a/layouts/partials/post-blurb.html
+++ b/layouts/partials/post-blurb.html
@@ -14,12 +14,16 @@
         {{ with .Params.height }}({{ . }}&nbsp;m){{ end }}
       {{ end }}
     </h3>
-    {{ if .Params.description }}
-      <div>{{ .Params.description | markdownify }}</div>
+    {{ if .Params.intro }}
+      <div>{{ .Params.intro | markdownify }}</div>
     {{ else }}
-      {{ if .Summary }}
-        <div>{{ .Summary }}</div>
-        <div class='jump-link'><a href="{{ .Permalink }}">{{ i18n "more" }}</a></div>
+      {{ if .Params.description }}
+        <div>{{ .Params.description | markdownify }}</div>
+      {{ else }}
+        {{ if .Summary }}
+          <div>{{ .Summary }}</div>
+          <div class='jump-link'><a href="{{ .Permalink }}">{{ i18n "more" }}</a></div>
+        {{ end }}
       {{ end }}
     {{ end }}
   </article>
