Fix HTTP links on map PoC

--- a/layouts/page/map.html
+++ b/layouts/page/map.html
@@ -6,8 +6,8 @@
 <h1 class="firstHeading">{{ .Title }}</h1>
   <script crossorigin='anonymous' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=' src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
 <div id="mapdiv" style="width: 100%; height: 50em;"></div>
-  <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
-  <link href='http://dev.openlayers.org/theme/default/style.css' rel='stylesheet' type='text/css' />
+  <script src="https://www.openlayers.org/api/OpenLayers.js"></script>
+  <link href='https://dev.openlayers.org/theme/default/style.css' rel='stylesheet' type='text/css' />
   <script>
 function getLonLat(lon,lat,map) {
   return new OpenLayers.LonLat(lon,lat)
