New functionality: regions (currently: Vipava, Karst, Istria)

--- a/layouts/page/map.html
+++ b/layouts/page/map.html
@@ -4,56 +4,6 @@
 <div id="content-wrapper" class="content-wrapper">
   <div class='post flex'>
 <h1 class="firstHeading">{{ .Title }}</h1>
-  <script crossorigin='anonymous' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=' src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
-<div id="mapdiv" style="width: 100%; height: 50em;"></div>
-  <script src="https://openlayers.org/api/OpenLayers.js"></script>
-  <!--<link href='https://dev.openlayers.org/theme/default/style.css' rel='stylesheet' type='text/css' />-->
-  <script>
-function getLonLat(lon,lat,map) {
-  return new OpenLayers.LonLat(lon,lat)
-      .transform(
-        new OpenLayers.Projection("EPSG:4326"), // transform from WGS 1984
-        map.getProjectionObject() // to Spherical Mercator Projection
-      );
-}
-
-function processHikeData(json,map,l_marker,icon) {
-  for (const hike_data of json) {
-    if (hike_data.start || hike_data.peak) {
-      var loc = hike_data.multipath ? hike_data.start : hike_data.peak
-      loc ||= hike_data.peak
-      var latlon = loc.split(',')
-
-      var hikeicon = hike_data.multipath ? icon.purple : icon.red;
-      var hike = new OpenLayers.Marker(getLonLat(latlon[1],latlon[0],map),hikeicon.clone());
-      hike.title = hike_data.title['sl'];
-      hike.events.register('mousedown', hike, function(evt) {
-        alert(this.title);
-        OpenLayers.Event.stop(evt); });
-      l_marker.addMarker(hike);
-    }
-  }
-}
-
-$(function() {
-  map = new OpenLayers.Map("mapdiv");
-  map.addLayer(new OpenLayers.Layer.OSM());
-  var zoom=9;
-
-  var markers = new OpenLayers.Layer.Markers( "Markers" );
-  map.addLayer(markers);
-  var size = new OpenLayers.Size(12,12);
-  var offset = new OpenLayers.Pixel(-(size.w/2), -size.h/2);
-  var icon = {};
-  icon.red = new OpenLayers.Icon('/images/RedBullet.png',size,offset);
-  icon.green = new OpenLayers.Icon('/images/GreenBullet.png',size,offset);
-  icon.purple = new OpenLayers.Icon('/images/PurpleBullet.png',size,offset);
-  $.getJSON('/data/hikes.json',function(data) {
-    processHikeData(data,map,markers,icon)
-  });
-
-  map.setCenter (getLonLat(14.9955,46.1512,map), zoom);
-});
-  </script>
+  {{ partial "include-map" .Params }}
   </div>
 </div>
