--- a/layouts/partials/header-head.html
+++ b/layouts/partials/header-head.html
@@ -23,4 +23,5 @@
   {{ if .OutputFormats.Get "RSS" }}
   <link href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" rel="alternate" type="application/rss+xml">
   {{ end }}
+  <script crossorigin='anonymous' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=' src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
 </head>
