--- a/layouts/partials/hikes-sidebar.html
+++ b/layouts/partials/hikes-sidebar.html
@@ -7,9 +7,7 @@
     </a>
   </nav>
   {{ partialCached (printf "hikes-sidebar-browse-%s" .Lang) . }}
-  {{ if .Params.order }}
-    {{ partial "flower-sidebar-order.html" . }}
-  {{ end }}
+  {{ partialCached "hikes-sidebar-regions" . }}
   {{ partialCached "sidebar-updated.html" (dict "Site" .Site "Type" "hikes") .Section }}
   <!-- "/snippets/archive-sidebar.html" | readFile | safeHTML -->
   <!-- "/snippets/tags-sidebar.html" | readFile | safeHTML -->
